--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 .vscode
 node_modules
+yolov5
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos
