--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-
 .vscode
 node_modules
 yolov5
+*_ignore*
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos
